# text_mining_1

./: .gitignore  cyk.py  lab1.ipynb  main.py  pyproject.toml  updated_version_lab1.ipynb
lab 5/: implement_transformer.ipynb  lora.ipynb  rope_embedding.py
lab2/: bpe-algorithm.ipynb  lemmatization.ipynb  m.model  m.vocab  test-cours.txt
lab3/: QUAERO_FrenchMed_cleaned.ospl  README.md  requirements.txt  tp1.ipynb  tp2.ipynb  tp2_bert.ipynb  tp2_cnn.ipynb  tp2_transformer.ipynb
lab3/TP_ISD2020/: script_conll_to_csv.py
lab3/TP_ISD2020/QUAERO_FrenchMed/EMEA/: EMEAdev_layer1_ID.csv  EMEAtest_layer1_ID.csv  EMEAtrain_layer1_ID.csv
lab3/TP_ISD2020/QUAERO_FrenchMed/MEDLINE/: MEDLINEdev_layer1_ID.csv  MEDLINEtest_layer1_ID.csv  MEDLINEtrain_layer1_ID.csv
lab3/TP_ISD2020/QUAERO_FrenchPress/: fra4_ID_dev.csv  fra4_ID_test.csv
