[project]
name = "text-mining-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "benepar>=0.2.0",
    "ipykernel>=7.1.0",
    "nltk>=3.9.2",
    "pandas>=2.3.3",
    "pip>=25.3",
    "scikit-learn>=1.7.2",
    "scispacy>=0.6.2",
    "spacy>=3.8.11",
]
